# smarties

./: .gitignore  README.md  pyproject.toml
figa/: cmb.py  mapmaking.py  tools.py
figa/systematics/: pointing.py
mapbased_syste/: cmb.py  hn.py  io.py  mapmaking.py  operators.py  tools.py
mapbased_syste/systematics/: beam.py  pointing.py
mapbasedsyste/: cmb.py  io.py  mapmaking.py
smarties/: cmb.py  hn.py  io.py  mapmaking.py  operators.py  tools.py
smarties/sky/: cmb.py  pointsrcs.py
smarties/systematics/: beam.py  pointing.py
tutorials/: advanced_mapmaking_1det.ipynb  basic_mapmaking.ipynb  basic_mapmaking_1det.ipynb  basic_mapmaking_1det_nstokes3.ipynb  differential_pointing.ipynb
tutorials/preliminary_tests/: test_h_n.ipynb
