[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools==69.2.0',
    'setuptools_scm[toml]>=6.2',
    'wheel',
]

[project]
name = 'smarties'
authors = [
    {name = 'Magdy Morshed', email = 'magdy.morshed@fe.infn.it'}
]
maintainers = [
    {name = 'Magdy Morshed', email = 'magdy.morshed@fe.infn.it'}
]
description = 'Map-based systematics simulation package for CMB experiments'
readme = 'README.md'
keywords = [
    'scientific computing',
]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering',
]
requires-python = '>=3.7'
license = {file = 'LICENSE'}
dependencies = [
    'healpy>=0.16.6',
    'numpy',
    'scipy',
    'opt_einsum',
]
dynamic = ['version']

[project.optional-dependencies]
optional = [
    'camb',
    'toml',
    'matplotlib',
    'pixell',
    'tqdm'
]


[project.urls]
# homepage = ''
# repository = ''

[[tool.mypy.overrides]]
module = [
    'smarties',
]
ignore_missing_imports = true

[tool.setuptools]
packages = ["smarties"]

[tool.setuptools_scm]
